# experiments

./: .gitignore  README.md
autoencoder/: variational_autoencoder.py
bloom/: bloom_filter.h  bloom_filter.hpp  main.cpp
cppmatmul/: compile_flags.txt  matmul.cu
custom_call/lib/: compile_flags.txt  custom_call.cu  helpers.hpp
custom_call/src/custom_call/: custom_call.py
docs/: conf.py  index.rst  modules.rst  transformer.rst
glox-llvm/: README.md
glox-llvm/frontend/ast/: ast.go
glox-llvm/frontend/parser/: parser.go
glox-llvm/frontend/scanner/: scanner.go
gradient/: README.md  gradients.py
jresnet/: .precommit-config.yaml  README.md
jresnet/jresnet/: modules.py  resnet.py
jresnet/test/: test_resnet.py
language_agent/: Cargo.toml
language_agent/src/: database.rs  llm.rs  main.rs
lox-llvm/src/frontend/ast/: ast_types.ml  ast_types.mli  dune
lox-llvm/src/frontend/src/: ast.rs  scanner.rs
lru/: lru.cpp  lru.h
lru/test/: unitest.cpp
matmul/: matmul.mojo
rlox-llvm/src/backend/: main.cpp
rlox-llvm/src/backend/deserialize/: program_ir.hpp
rlox-llvm/src/frontend/src/: ast.rs  scanner.rs
subscriber/: Cargo.toml
subscriber/src/: lib.rs  main.rs
subscriber/tests/: health_check.rs
tera/: Cargo.toml
tera/src/: cli.rs  database.rs  embeddings.rs  inference.rs  main.rs  utils.rs  whisper.rs
transformer/: transformer.py
translationAgent/: .gitignore  main.py
