[package]
name = "language_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async_once = "0.2.6"
candle-core = "0.7.1"
candle-transformers = "0.7.1"
clap = { version = "4.5.18", features = ["derive"] }
hf-hub = "0.3.2"
json = "0.12.4"
lazy_static = "1.5.0"
serde = "1.0.210"
serde_json = "1.0.128"
surrealdb = { version = "2.0.2", features = ["kv-rocksdb"] }
tokenizers = "0.20.0"
tokio = { version = "1", features = ["full"] }
