[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = {version = "1.35.0", features = ["full"]}

[dev-dependencies]
reqwest = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
name = "subscriber"
path = "src/main.rs"
