[package]
name = "tera"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
candle-core = { version = "0.7.2" }
candle-transformers = { version = "0.7.2" }
candle-nn = { version = "0.7.2" }
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = [
    "full",
    "macros",
    "rt-multi-thread",
    "test-util",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
hf-hub = { version = "0.3.2", features = ["tokio"] }
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.108"
tracing-chrome = "0.7.1"
lazy_static = "1.4.0"
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
serde = { version = "1.0.193", features = ["derive"] }
async_once = "0.2.6"
reqwest = "0.11.22"
regex = "1.10.2"
chrono = "0.4.31"
pdf-extract = "0.7.2"
byteorder = "1.5.0"
wav = "1.0.0"
rand = "0.8.5"
tempfile = "3.13.0"
dirs = "5.0.1"
prettytable-rs = "0.10.0"
hound = "3.5.1"
